Configure frontend API env and harden backend deploy config